--- a/scss/secciones/_footer.scss
+++ b/scss/secciones/_footer.scss
@@ -35,7 +35,9 @@
                     
                     img {
                         height: 20px;
-                        margin-right: 5px;                    }
+                        margin-right: 5px; 
+                        text-decoration: white;                  
+                    }
                     p {
                         margin: 0;
                         color: $colorFondo;
