--- a/scss/secciones/_index.scss
+++ b/scss/secciones/_index.scss
@@ -28,11 +28,6 @@ main {
                   }
             }
 
-            .form-price {
-                width: 91.6%;
-                margin: 10px;
-            }
-
             .d-grid {
                 .button-search {
                     margin-top: 13px;
@@ -52,71 +47,107 @@ main {
         background-color: aliceblue;
     }
     .propiedades-destacadas {
-        display: flex;
-        justify-content: space-between;
-        background-color: aliceblue;
-        .card {
-            margin: 15px;
-            margin-bottom: 30px;            
-            @extend %estiloCard;
-            &:hover {
-                transform: translateY(2px);
-            }
-            .img-container {
-                position: relative;
-                p {
-                    position: absolute;
-                    background-color: rgba(0, 0, 0, 0.363);
-                    color: $colorFondo;
-                    margin: 0;
-                    bottom: 0;
-                    padding: 0.5rem;
-                    font-size: 1.5rem;
+            display: grid;
+            grid-template-columns: 1fr 1fr 1fr 1fr;
+            grid-template-rows: 1fr;
+            grid-auto-columns: 1fr;
+            grid-template-areas:
+              "casa-uno casa-dos casa-tres casa-cuatro";
+            background-color: aliceblue;
+
+            .casa-uno { grid-area: casa-uno; }
+            .casa-dos { grid-area: casa-dos; }
+            .casa-tres { grid-area: casa-tres; }
+            .casa-4 { grid-area: casa-4; }
+            .card {
+                margin: 15px;
+                margin-bottom: 30px;            
+                @extend %estiloCard;
+                &:hover {
+                    transform: translateY(2px);
                 }
-                }
-            }
-            .card-icon{
-                display: flex;
-                flex-direction: row;
-                .card-utilities {
-                display: flex;
-                align-items: center;
-                flex-direction: row;
-                justify-content: center;
-                }
-            }  
-                .card-body {
-                    a {
-                        text-decoration: none;
-                        color: $colorTexto;
-                        }
-                    .icon {
-                    width: 25px;
-                    margin: 10px;
-                    }
+                .img-container {
+                    position: relative;
                     p {
-                    margin: 0;
+                        position: absolute;
+                        background-color: rgba(0, 0, 0, 0.363);
+                        color: $colorFondo;
+                        margin: 0;
+                        bottom: 0;
+                        padding: 0.5rem;
+                        font-size: 1rem;
                     }
-                
+                    }
+                }
+                .card-icon{
+                    display: flex;
+                    flex-direction: row;
+                    .card-utilities {
+                    display: flex;
+                    align-items: center;
+                    flex-direction: row;
+                    justify-content: center;
+                    }
+                }  
+                .card-body {
+                        a {
+                            text-decoration: none;
+                            color: $colorTexto;
+                            }
+                        .icon {
+                        width: 25px;
+                        margin: 10px;
+                        }
+                        p {
+                        margin: 0;
+                        }
+                    
             }
         }
     }
 
-@media (max-width: 900px) {
-    .propiedades-destacadas {
-        flex-wrap: wrap;
-    width: 50%;
-    margin-left: 25%;
-    margin-right: 25%;
-        
+@media (max-width: 1100px) {
+    main {
+        .propiedades-destacadas { 
+                grid-template-columns: 1fr 1fr;
+                grid-template-rows: 1fr 1fr;
+                grid-auto-columns: 1fr;
+                grid-template-areas:
+                "casa-uno casa-dos"
+                "casa-tres casa-cuatro";
+                justify-items: center;
+                .card {
+                    width: 70%;
+                    
+                }
+            }  
+        }
     }
+
+@media (max-width: 600px) {
+    main {
+    .propiedades-destacadas {
+            grid-template-columns: 1fr;
+            grid-template-rows: 1fr 1fr 1fr 1fr;
+            grid-auto-flow: row;
+            grid-template-areas:
+              "casa-uno"
+              "casa-dos"
+              "casa-tres"
+              "casa-cuatro";
+            .card {
+                width: 60%;
+            }
+        }
+    } 
 }
+
 @media (max-width: 500px) {
+    main {
     .propiedades-destacadas {
-        flex-wrap: wrap;
-    width: 80%;
-    margin-left: 10%;
-    margin-right: 10%;
-        
-    }
+            .card {
+                width: 80%;
+            }
+        }
+    } 
 }
