--- a/scss/secciones/_quienes.scss
+++ b/scss/secciones/_quienes.scss
@@ -39,6 +39,9 @@
             .button-search {
                 @extend %estiloBoton;
             }
+            .form-select {
+                @extend %estiloSelect;
+            }
         }  
     }
 }
