--- a/scss/secciones/_index.scss
+++ b/scss/secciones/_index.scss
@@ -80,27 +80,47 @@ main {
                     }
                 }
                 .card-icon{
-                    display: flex;
-                    flex-direction: row;
+                    display: grid;
+                    grid-auto-columns: 1fr; 
+                    grid-template-columns: 1fr 1fr; 
+                    grid-template-rows: 1fr 1fr;
+                    grid-template-areas: 
+                    "icon-uno icon-dos"
+                    "icon-tres icon-cuatro";
+
+                    .bedroom { grid-area: icon-uno; }
+                    .bathroom { grid-area: icon-dos; }
+                    .m2 { grid-area: icon-tres; }
+                    .garage { grid-area: icon-cuatro; }
+
                     .card-utilities {
                     display: flex;
                     align-items: center;
                     flex-direction: row;
                     justify-content: center;
+                    padding: 0;
                     }
                 }  
                 .card-body {
-                        a {
-                            text-decoration: none;
-                            color: $colorTexto;
-                            }
-                        .icon {
-                        width: 25px;
-                        margin: 10px;
+                    height: 60px;
+                    a {
+                        text-decoration: none;
+                        color: $colorTexto;
                         }
-                        p {
-                        margin: 0;
-                        }
+                    .icon {
+                    width: 25px;
+                    margin: 10px;
+                    }
+                    p {
+                    margin: 0;
+                    color: black;
+                    }
+                    h5 {
+                        color: black;
+                    }
+                        
+                        
+    
                     
             }
         }
