--- a/scss/secciones/_venta.scss
+++ b/scss/secciones/_venta.scss
@@ -21,6 +21,23 @@ main {
                 .row {
                     max-height: 208px;
                     overflow: scroll;
+                    .col-md-4 {
+                        .carousel-inner {
+                            position: relative;
+                            p {
+                                position: absolute;
+                                background-color: rgba(0, 0, 0, 0.363);
+                                color: $colorFondo;
+                                margin: 0;
+                                bottom: 0;
+                                right: 0;
+                                padding: 0.5rem;
+                                font-size: 1rem;
+                                z-index: 2;
+                            }
+                        }
+
+                    }
                 }
                     }
                 }
